# hemolymph-frontend

./: Cargo.toml  Makefile  index.html
src/: app.rs  lib.rs  main.rs  search.rs
src-tauri/: tauri.conf.json
src/app/: card_details.rs
