[package]
name = "hemolymph-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
yew = { version = "0.21.0", features = ["csr", "hydration"] }
yew-router = "0.18.0"
hemoglobin = "0.3.0"
futures = "0.3.30"
gloo-timers = "0.3.0"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "HtmlElement",
    "HtmlMetaElement",
    "EventTarget",
]
